2001-01-30  Lars Wirzenius  <liw@iki.fi>

	* gwlib/utils.[ch]: Made is_allowed_ip accept Octstr arguments
	instead of char *. Dies, cstr, die.
	
	* gw/bb_boxc.c, gw/bb_http.c, gw/bb_udp.c, gw/smsbox.c,
	gw/smsc_emi.c, gw/smsc_fake.c: Fixed the calls to is_allowed_ip
	to follow new calling convention.

2001-01-30  Lars Wirzenius  <liw@iki.fi>

	* Makefile.in: Moved the wildcard patterns to the beginning, where
	they are more visible. Should've done this when I first wrote them.
	
	* gw/smsbox.c: Fix memory leak.
	
	* gw/smsc_fake.c: don't call octstr_get_cstr with NULL argument.
	(Should fix is_allowed_ip instead.)
	
	* gw/urltrans.c: Look up the keyword in a case insensitive manner.
	Thanks to Peter for pointing this out.
	
	* gwlib/gwmem.h: Introduced the gw_claim_area_for macro. It is the
	same as gw_claim_area, except it gets the position as arguments,
	instead of figuring it out itself.

	* gwlib/cfg.[ch]: Used gw_claim_area_for to claim the return
	value of cfg_get.

2001-01-29  Richard Braakman  <dark@wapit.com>

	* gwlib/dict.c: Make dict_keys() lock its dictionary.

2001-01-29  Kalle Marjola  <rpr@wapit.com>

	* Makefile.in: clean now deletes */*.o, too. 

2001-01-29  Lars Wirzenius  <liw@iki.fi>

	* gwlib/protected.h: Undefine the protection macros before
	defining them, to avoid problems with multiple definitions on
	platforms that define them as macros instead of (or in addition
	to) functions.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.[ch], gw/smsbox.c: Killed the almost-unused
	function octstr_replace and converted the only place it was
	being used anymore to create a new Octstr instead.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* AUTHORS, ChangeLog, NEWS, checks/check_fakesmsc.sh,
	checks/check_fakewap.sh, checks/check_sendsms.sh,
	checks/check_smpp.sh, doc/arch/arch.xml, gw/bb_smscconn.c,
	gw/bearerbox,.c gw/smsbox.c, gw/smsc.c gw/urltrans.[ch],
	gw/wapbox.c, gwlib/http.c, gwlib/octstr. test/drive_smpp.c,