@@ -2,6 +2,7 @@
 /Makefile
 checks/check_counter
 checks/check_date
+checks/check_ipcheck
 checks/check_list
 checks/check_octstr
 /config.cache
